# LETS_HASH

./: .gitignore  CMakeLists.txt  README.md  main.c
inc/: hash.h  test.h
src/: hash.c  test.c
